<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/drawer_group_manage">
        <menu>
            <group android:id="@+id/group_drawer_manage">
                <item
                    android:id="@+id/sub_setting"
                    android:icon="@drawable/ic_subscriptions_24dp"
                    android:title="@string/title_sub_setting" />
                <item
                    android:id="@+id/routing_setting"
                    android:icon="@drawable/ic_routing_24dp"
                    android:title="@string/routing_settings_title" />
                <item
                    android:id="@+id/settings"
                    android:icon="@drawable/ic_settings_24dp"
                    android:title="@string/title_settings" />
                <item
                    android:id="@+id/backup_restore"
                    android:icon="@drawable/ic_restore_24dp"
                    android:title="@string/title_configuration_backup_restore" />
            </group>
        </menu>
    </item>

    <item android:title="@string/drawer_group_tools">
        <menu>
            <group android:id="@+id/group_drawer_tools">
                <item
                    android:id="@+id/logcat"
                    android:icon="@drawable/ic_logcat_24dp"
                    android:title="@string/title_logcat" />
                <item
                    android:id="@+id/check_for_update"
                    android:icon="@drawable/ic_check_update_24dp"
                    android:title="@string/update_check_for_update" />
                <item
                    android:id="@+id/about"
                    android:icon="@drawable/ic_about_24dp"
                    android:title="@string/title_about" />
            </group>
        </menu>
    </item>
</menu>
